# Discocaml

./: LICENSE  Makefile  README.md  bot.ml  bot.mli  channel.ml  channel.mli  dune  guild.ml  http.ml  message.ml  message.mli  types.atd  user.mli  wrappers.ml
example/: Makefile  discochameau.ml  dune
src/: bot.ml  channel.mli  dune  http.ml  message.ml  types.atd  user.ml  wrappers.ml
